--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
-  "name": "App Name",
-  "description": "App Description",
-  "version": "0.0.0",
-  "dependencies": {},
+  "name": "Genetic-Algos",
+  "description": "Lets have run with GA",
+  "version": "1.0.0",
+  "dependencies": {
+    "csv": "^3.1.0"
+  },
   "devDependencies": {
-    "jasmine": "^3.2.0"
+    "jasmine": "^3.2.0",
+    "jasmine-core": "^3.2.1"
   },
   "scripts": {
-    "start": "node index.js",
+    "start": "node ./src/index.js",
     "test": "jasmine"
   },
   "main": "index.js"
